# School21-CoreWar

./: .gitignore  .my.swp  .test_sti.s.swp  11  111  111777  CMakeLists.txt  Makefile  author  autor  cor_1  corewar  corewar_arina  corewar_ch  corewar_fuck  corewar_kk  ddd  ddd_cor  ft_human.s  kk  main_c.c  md_my  md_test  mm  my  my_4_s  my_4_ui  my_4_ui_+2  my_Hc  norm  one.sh  opo  res.txt  sh_cyc  sh_new.sh  sh_one_ch.sh  sh_orig.sh  sh_two.sh  test  test1501  (+7 more)
Corewar_kk/Corewar/: asm  corewar
Corewar_kk/Corewar/srcs/corewar/: vm_game.c
Corewar_kk_xx/Corewar/: corewar
check_kk/: norm  sh_cyc
check_kk/Corewar/: asm  corewar  rrr  test
check_kk/Corewar/srcs/corewar/: op_shift.c  operation_4.c  operation_4b.c  vm_game.c
check_kk/Corewar_one_more/Corewar/: arg  asm  corewar  norm  test  tttmd5
check_kk/Corewar_one_more/Corewar/srcs/corewar/: operation_1.c  operation_2.c  operation_4.c  operation_4b.c  vm_game.c
check_kk_not_git/Corewar/: corelol.cor
check_kk_not_git/Corewar/srcs/corewar/: operation_1.c  operation_4.c  operation_4b.c
cor_1.dSYM/Contents/: Info.plist
cor_1.dSYM/Contents/Resources/DWARF/: cor_1
corewar_arina.dSYM/Contents/: Info.plist
corewar_arina.dSYM/Contents/Resources/DWARF/: corewar_arina
corewar_asm/: Makefile  asm  comment_len_2049.s
corewar_asm/ft_printf/: Makefile
corewar_asm/ft_printf/source/: one.c  print_str.c
corewar_asm/include/: asm.h  op.h
corewar_asm/libft/: .ft_memcpy.c.swp  Makefile  author  ft_bzero.c  ft_check_dimension.c  ft_check_un_dimension.c  ft_itoa.c  ft_itoo.c  ft_itox.c  ft_memccpy.c  ft_printf.h  ft_put_decimal.c  ft_put_hexadecimal.c  ft_put_octal.c  ft_put_pointer.c  ft_put_unsigned.c  ft_putnbr.c  ft_un_itoa.c  libft.h  type_float2.c
corewar_asm/libft/includes/: libft.h
corewar_asm/source/: .main.c.swp  .read_name_comment.c.swp  .write_header.c.swp  add_lable_list.c  arguments.c  arguments_check_one.c  arguments_check_two.c  arguments_get.c  check_op_or_xor_and_arg.c  check_op_st_arg.c  delete_list.c  error_and_clean_memory.c  file.c  four_char_operator.c  init_agr.c  instruction.c  isprint_char.c  label.c  lable_add_list.c  main.c  operations.c  read_comment_champ.c  read_dir_arg.c  read_name_comment.c  search_lbl.c  write.c  write_header.c  write_labels.c
corewar_diasm/: diasm  fail_LAS_T.dis  test_sti.s
corewar_diasm/source/: print_bit_hex.c
ft_printf/: Makefile
ft_printf/source/: flag_check.c  format_check.c  ft_int_base.c  ft_itoa_ll.c  one.c  print_num.c  print_str.c  str_format.c
includes/: .op.h.swp  corewar.h  libft.h  libftprintf.h  op.h
intra_c/: sh_cyc  test
intra_resource/: 23_02  sh_cyc
libft/: Makefile  ft_atoi.c  ft_memcpy.c
new_check_kk/Corewar/: asm  corewar
new_check_kk/Corewar/includes/: corewar.h
new_check_kk/Corewar/srcs/corewar/: op_shift.c  operation_3.c  vm_game.c
new_checker/Corewar/: CMakeLists.txt  asm
new_checker/Corewar/srcs/corewar/: operation_2.c
src_1/: main.c
src_cor/: arena.c  arg.c  carr_list.c  champ.c  do_op.c  ft_add.c  ft_aff.c  ft_and.c  ft_fork_lfork.c  ft_ld.c  ft_ldi.c  ft_liba.c  ft_live.c  ft_or_xor.c  ft_st.c  ft_sti.c  ft_sub.c  ft_zjmp.c  go_cor.c  main.c  parse_av.c  print_code.c  pytnon_cmp  read_byte.c  test_my_01  test_not_my_01  vis_etc.c  visu_cicle.c  visu_init.c  write_map.c
src_cor_4/: champ.c  ft_fork_lfork.c  ft_ld.c  ft_sti.c
src_cor_7/: ft_ldi.c  ft_live.c
src_cor_arina/: ft_or_xor.c
src_cor_arina_X/: arena.c  champ.c  do_op.c  ft_add.c  ft_and.c  ft_fork_lfork.c  ft_ld.c  ft_liba.c  ft_live.c  ft_st.c  ft_sti.c  ft_sub.c  ft_zjmp.c  parse_av.c  print_code.c  read_byte.c  visu_cicle.c
src_cor_int/: arena.c  carr_list.c  champ.c  do_op.c  ft_ld.c  ft_ldi.c  ft_live.c  ft_sti.c  go_cor.c  main.c  parse_av.c  print_code.c  read_byte.c
src_cor_last/: ft_live.c  ft_zjmp.c
src_cor_norm/: carr_list.c  ft_add.c  ft_aff.c  ft_and.c  ft_liba.c  ft_or_xor.c  main.c
test_sh/: sh_new copy.sh  sh_new.sh  sh_one_ch.sh  sh_orig.sh  sh_two.sh
useless_files/: 111  VVVVVVVV  norm  test
vm_champs/: .test.swp  1  one.sh  test  test1500  test2
vm_champs/champs/: Gagnant copy 3.s  Gagnant.cor  Gagnant.s  Gagnant_x.s  candy.s  ccc  evo.cor  evo.s  jumper.cor  jumper.s  kek.s  mat.cor  mat.s  mix.cor  mix.s  mortel.cor  new_ch.cor  new_ch.s
vm_champs/champs/championships/2017/adenis/: Explosive_Kitty.s
