cmake_minimum_required(VERSION 3.14)
project(corelol_horace C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_printf/head)
include_directories(includes)
include_directories(libft/includes)

add_executable(corelol_horace
        ft_printf/head/libft.h
        ft_printf/head/libftprintf.h
        ft_printf/source/flag_check.c
        ft_printf/source/format_check.c
        ft_printf/source/ft_int_base.c
        ft_printf/source/ft_itoa_ll.c
        ft_printf/source/one.c
        ft_printf/source/print_c_u.c
        ft_printf/source/print_d.c
        ft_printf/source/print_f.c
        ft_printf/source/print_num.c
        ft_printf/source/print_o_x.c
        ft_printf/source/print_str.c
        ft_printf/source/str_format.c
        includes/corewar.h
        includes/ft_printf.h
        includes/libft.h
        includes/libftprintf.h
        includes/op.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/ft_abs.c
        libft/ft_absf.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_count_words.c
        libft/ft_free_join.c
        libft/ft_free_strjoin_duo.c
        libft/ft_free_strjoin_rev.c
        libft/ft_frtwarr.c
        libft/ft_ftoa.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_list_add.c
        libft/ft_list_foreach_if.c
        libft/ft_list_push_back.c
        libft/ft_list_remove_free_if.c
        libft/ft_lstadd.c
        libft/ft_lstaddback.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_ltoa.c
        libft/ft_ltoa_base.c
        libft/ft_max.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_min.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_setbackground_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtolower.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_truncf.c
        libft/ft_ultoa.c
        libft/ft_ultoa_base.c
        libft/get_next_line.c
        src_cor/arena.c
        src_cor/carr_list.c
        src_cor/champ.c
        src_cor/do_op.c
        src_cor/ft_add.c
        src_cor/ft_aff.c
        src_cor/ft_and.c
        src_cor/ft_fork_lfork.c
        src_cor/ft_ld.c
        src_cor/ft_ldi.c
        src_cor/ft_liba.c
        src_cor/ft_live.c
        src_cor/ft_or_xor.c
        src_cor/ft_st.c
        src_cor/ft_sti.c
        src_cor/ft_sub.c
        src_cor/ft_zjmp.c
        src_cor/go_cor.c
        src_cor/main.c
        src_cor/parse_av.c
        src_cor/print_code.c
        src_cor/read_byte.c
        src_cor/visu_cicle.c
        src_cor/visu_init.c
        src_cor/arg.c
        src_cor/write_map.c)

target_link_libraries(${PROJECT_NAME} ncurses)