cmake_minimum_required(VERSION 3.14)
project(Corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(Corewar
        includes/asm.h
        includes/corewar.h
        includes/deasm.h
        includes/fixed_io.h
        includes/ft_fct_tab.h
        includes/ft_printf.h
        includes/label.h
        includes/lexer.h
        includes/libft.h
        includes/op.h
        includes/parser.h
        includes/ressources.h
        includes/scanner.h
        includes/viewer.h
        libft/includes/ft_fct_tab.h
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/srcs/ft_printf/buffer.c
        libft/srcs/ft_printf/cast_mod.c
        libft/srcs/ft_printf/format.c
        libft/srcs/ft_printf/ft_nblen.c
        libft/srcs/ft_printf/ft_nblen_b.c
        libft/srcs/ft_printf/ft_power.c
        libft/srcs/ft_printf/ft_printf.c
        libft/srcs/ft_printf/ft_u_nblen.c
        libft/srcs/ft_printf/ft_u_power.c
        libft/srcs/ft_printf/fwp_bin.c
        libft/srcs/ft_printf/fwp_char.c
        libft/srcs/ft_printf/fwp_hex.c
        libft/srcs/ft_printf/fwp_int.c
        libft/srcs/ft_printf/fwp_oct.c
        libft/srcs/ft_printf/fwp_ptr.c
        libft/srcs/ft_printf/fwp_u_int.c
        libft/srcs/ft_printf/fwp_wchar.c
        libft/srcs/ft_printf/fwp_wstr.c
        libft/srcs/ft_printf/lst_arg.c
        libft/srcs/ft_printf/num_field.c
        libft/srcs/ft_printf/parser.c
        libft/srcs/ft_printf/str_field.c
        libft/srcs/get_next_line/ft_getline.c
        libft/srcs/get_next_line/get_next_line.c
        libft/srcs/memory/ft_bzero.c
        libft/srcs/memory/ft_memalloc.c
        libft/srcs/memory/ft_memccpy.c
        libft/srcs/memory/ft_memchr.c
        libft/srcs/memory/ft_memcmp.c
        libft/srcs/memory/ft_memcpy.c
        libft/srcs/memory/ft_memdel.c
        libft/srcs/memory/ft_memmove.c
        libft/srcs/memory/ft_memset.c
        libft/srcs/print/ft_putchar.c
        libft/srcs/print/ft_putchar_fd.c
        libft/srcs/print/ft_putendl.c
        libft/srcs/print/ft_putendl_fd.c
        libft/srcs/print/ft_putnbr.c
        libft/srcs/print/ft_putnbr_fd.c
        libft/srcs/print/ft_putstr.c
        libft/srcs/print/ft_putstr_fd.c
        libft/srcs/single_linked_list/ft_lstadd.c
        libft/srcs/single_linked_list/ft_lstaddback.c
        libft/srcs/single_linked_list/ft_lstappend.c
        libft/srcs/single_linked_list/ft_lstdel.c
        libft/srcs/single_linked_list/ft_lstdelone.c
        libft/srcs/single_linked_list/ft_lstinttab.c
        libft/srcs/single_linked_list/ft_lstiter.c
        libft/srcs/single_linked_list/ft_lstlen.c
        libft/srcs/single_linked_list/ft_lstmap.c
        libft/srcs/single_linked_list/ft_lstnew.c
        libft/srcs/single_linked_list/ft_lstpop.c
        libft/srcs/single_linked_list/ft_lstpush.c
        libft/srcs/strings/ft_strcat.c
        libft/srcs/strings/ft_strchr.c
        libft/srcs/strings/ft_strclr.c
        libft/srcs/strings/ft_strcmp.c
        libft/srcs/strings/ft_strcpy.c
        libft/srcs/strings/ft_strdel.c
        libft/srcs/strings/ft_strdup.c
        libft/srcs/strings/ft_strequ.c
        libft/srcs/strings/ft_striter.c
        libft/srcs/strings/ft_striteri.c
        libft/srcs/strings/ft_strjoin.c
        libft/srcs/strings/ft_strlcat.c
        libft/srcs/strings/ft_strlen.c
        libft/srcs/strings/ft_strmap.c
        libft/srcs/strings/ft_strmapi.c
        libft/srcs/strings/ft_strncat.c
        libft/srcs/strings/ft_strncmp.c
        libft/srcs/strings/ft_strncpy.c
        libft/srcs/strings/ft_strnequ.c
        libft/srcs/strings/ft_strnew.c
        libft/srcs/strings/ft_strnstr.c
        libft/srcs/strings/ft_strrchr.c
        libft/srcs/strings/ft_strrev.c
        libft/srcs/strings/ft_strsplit.c
        libft/srcs/strings/ft_strsplitdel.c
        libft/srcs/strings/ft_strstr.c
        libft/srcs/strings/ft_strsub.c
        libft/srcs/strings/ft_strtrim.c
        libft/srcs/utils/ft_atoi.c
        libft/srcs/utils/ft_isalnum.c
        libft/srcs/utils/ft_isalpha.c
        libft/srcs/utils/ft_isascii.c
        libft/srcs/utils/ft_isdigit.c
        libft/srcs/utils/ft_isdigitstr.c
        libft/srcs/utils/ft_islower.c
        libft/srcs/utils/ft_isprint.c
        libft/srcs/utils/ft_isspace.c
        libft/srcs/utils/ft_isupper.c
        libft/srcs/utils/ft_itoa.c
        libft/srcs/utils/ft_squeeze.c
        libft/srcs/utils/ft_tolower.c
        libft/srcs/utils/ft_toupper.c
        srcs/asm/asm.c
        srcs/asm/asm_utils.c
        srcs/asm/deasm.c
        srcs/asm/deasm_manage.c
        srcs/asm/fixed_io.c
        srcs/asm/label.c
        srcs/asm/label_init.c
        srcs/asm/label_utils.c
        srcs/asm/lexer.c
        srcs/asm/op.c
        srcs/asm/parser.c
        srcs/asm/parser_header.c
        srcs/asm/parser_init.c
        srcs/asm/scanner.c
        srcs/corewar/corewar.c
        srcs/corewar/get_players.c
        srcs/corewar/get_players_errors.c
        srcs/corewar/load_arena.c
        srcs/corewar/op.c
        srcs/corewar/op_shift.c
        srcs/corewar/operate.c
        srcs/corewar/operation_1.c
        srcs/corewar/operation_2.c
        srcs/corewar/operation_2b.c
        srcs/corewar/operation_3.c
        srcs/corewar/operation_4.c
        srcs/corewar/operation_4b.c
        srcs/corewar/vm_debbug.c
        srcs/corewar/vm_game.c
        srcs/corewar/vm_init_free.c
        srcs/corewar/vm_parsing.c
        srcs/corewar/vw_draw_img.c
        srcs/corewar/vw_draw_life.c
        srcs/corewar/vw_draw_tools.c
        srcs/corewar/vw_init.c
        srcs/corewar/vw_init_win.c
        srcs/corewar/vw_maj_process.c
        srcs/corewar/vw_maj_win.c
        srcs/corewar/vw_th_anim.c
        srcs/corewar/vw_th_core.c
        srcs/corewar/vw_th_input.c
        srcs/corewar/vw_th_render.c
        srcs/corewar/vw_th_timer.c)
